# MIE443_Contest3

./: .gitignore  CMakeLists.txt  README.md  mie443_contest3.yml  package.xml
include/: bumper.h  callback.h  contest3.h  control.h  explore.h  interaction.h  play_video.h
launch/: AMCL.launch  contest3.launch  exploration.launch  gmapping.launch  turtlebot_world.launch
launch/includes/: move_base.launch.xml  safety_controller.launch.xml  velocity_smoother.launch.xml
launch/includes/amcl/: amcl.launch.xml
maps/: empty.pgm  empty.yaml
msg/: EmotionFaceMsg.msg  EmotionMsg.msg
param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/: bumper.cpp  callback.cpp  contest3.cpp  control.cpp  costmap_client.cpp  emotionClassifier.py  emotionTrainingSample.py  ensemble.py  explore.cpp  frontier_search.cpp  interaction.cpp  play_video.cpp  victimLocator.py  victims.csv
worlds/: world_empty.world  world_practice.world
worlds/model/: box_contest3.dae
worlds/model/box_contest3/: model.config  model.sdf
worlds/model/vismarker/: model.config  model.sdf
